# TRUEOS-RADS

./: .env.local.example  .gitignore  Cargo.toml  README.md  localcoder
docs/: api-sketch.md  architecture.md  bp-dist-stages.md  featurecheck-matrix.md  html-css-ui2-description.md  template-creation.md  ui2-rad-concepts.md
examples/generated-project/: Cargo.toml  README.md  app.blueprint.json  rads.project.json
examples/generated-project/package/: manifest.trueos.json  package.blueprint.json
rads-workspace/api-canvas/: Cargo.toml  README.md  app.blueprint.json  rads.project.json
rads-workspace/dist-fresh/: Cargo.toml  README.md  app.blueprint.json  rads.project.json
rads-workspace/hello-ui2/: Cargo.toml  README.md  app.blueprint.json  rads.project.json
rads-workspace/rads-multiwindow-demo-1778201281/: Cargo.toml  README.md  app.blueprint.json  rads.project.json
rads-workspace/rads-multiwindow-demo-1778201382/: Cargo.toml  README.md  app.blueprint.json  rads.project.json
rads-workspace/rads-service-1778201273/: Cargo.toml  README.md  app.blueprint.json  rads.project.json
rads-workspace/rads-smoke-1778201273/: Cargo.toml  README.md  app.blueprint.json  rads.project.json
scripts/: dev.sh
src/: designer.rs  file_store.rs  generator.rs  jobs.rs  lib.rs  localcoder.rs  main.rs  model.rs  project_templates.rs  server.rs  templates.rs  ui2_options.rs  watcher.rs
static/: app.js  index.html  localcoder_chat.js  styles.css
tests/: featurecheck_smoke.rs  generator_tests.rs  localcoder_tests.rs  smoke.rs  template_tests.rs  ui2_options_tests.rs
(+71 files in other folders)
