[package]
name = "trueos-rads"
version = "0.1.0"
edition = "2024"
description = "TRUEOS RADS: a userspace RAD IDE for TRUEOS/UI2 apps"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
futures-core = "0.3"
futures-util = "0.3"
notify = "8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.52", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.14"
